--- a/config/core.entity_view_display.node.landing_page.default.yml
+++ b/config/core.entity_view_display.node.landing_page.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.node.landing_page.field_oc_widgets
     - node.type.landing_page
   module:
-    - ctools_block
     - entity_reference_revisions
     - layout_builder
     - layout_discovery
@@ -23,32 +22,31 @@ third_party_settings:
         layout_id: layout_onecol
         layout_settings: {  }
         components:
-          6c36eaac-6cfe-4697-b401-4c4d5f5c6022:
-            uuid: 6c36eaac-6cfe-4697-b401-4c4d5f5c6022
+          02d32b97-5752-4d0f-8eb3-de3413b50d8b:
+            uuid: 02d32b97-5752-4d0f-8eb3-de3413b50d8b
             region: content
             configuration:
-              id: 'entity_field:node:field_banner'
+              id: 'field_block:node:landing_page:field_banner'
               label: Banner
-              provider: ctools_block
+              provider: layout_builder
               label_display: '0'
               formatter:
                 label: hidden
                 type: entity_reference_entity_view
                 settings:
-                  view_mode: default
+                  view_mode: banner
                 third_party_settings: {  }
-                weight: 0
               context_mapping:
                 entity: layout_builder.entity
             additional: {  }
             weight: 0
-          f9677b0c-5520-49b6-8fda-957b2b771855:
-            uuid: f9677b0c-5520-49b6-8fda-957b2b771855
+          2d62265e-ae58-4309-8608-eadd292e3358:
+            uuid: 2d62265e-ae58-4309-8608-eadd292e3358
             region: content
             configuration:
-              id: 'entity_field:node:title'
+              id: 'field_block:node:landing_page:title'
               label: Title
-              provider: ctools_block
+              provider: layout_builder
               label_display: '0'
               formatter:
                 label: hidden
@@ -56,36 +54,38 @@ third_party_settings:
                 settings:
                   link_to_entity: false
                 third_party_settings: {  }
-                weight: 0
               context_mapping:
                 entity: layout_builder.entity
             additional: {  }
             weight: 1
-          aa099101-6a18-4815-8475-5aa33dd1d1a0:
-            uuid: aa099101-6a18-4815-8475-5aa33dd1d1a0
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          76bf8cbb-ca39-45d8-9276-f923e8550fc4:
+            uuid: 76bf8cbb-ca39-45d8-9276-f923e8550fc4
             region: content
             configuration:
-              id: 'entity_field:node:body'
+              id: 'field_block:node:landing_page:body'
               label: Body
-              provider: ctools_block
+              provider: layout_builder
               label_display: '0'
               formatter:
                 label: hidden
                 type: text_default
                 settings: {  }
                 third_party_settings: {  }
-                weight: 0
               context_mapping:
                 entity: layout_builder.entity
             additional: {  }
-            weight: 2
-          f38e6559-ee91-4c1f-b047-f54a1413dcb1:
-            uuid: f38e6559-ee91-4c1f-b047-f54a1413dcb1
+            weight: 0
+          8385c801-d808-49fe-9538-a9b9c74e79ab:
+            uuid: 8385c801-d808-49fe-9538-a9b9c74e79ab
             region: content
             configuration:
-              id: 'entity_field:node:field_oc_widgets'
+              id: 'field_block:node:landing_page:field_oc_widgets'
               label: Widgets
-              provider: ctools_block
+              provider: layout_builder
               label_display: '0'
               formatter:
                 label: hidden
@@ -93,11 +93,12 @@ third_party_settings:
                 settings:
                   view_mode: default
                 third_party_settings: {  }
-                weight: 0
               context_mapping:
                 entity: layout_builder.entity
             additional: {  }
-            weight: 3
+            weight: 1
+    allow_custom: false
+    is_enabled: true
 _core:
   default_config_hash: 1h2sEQ222bYyFk67-1xEhAMXEdbzEI367eTDmO2XiM8
 id: node.landing_page.default
@@ -143,3 +144,4 @@ content:
     third_party_settings: {  }
 hidden:
   addtoany: true
+  layout_builder__layout: true
