--- a/config/core.entity_view_display.node.support_book.default.yml
+++ b/config/core.entity_view_display.node.support_book.default.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - field.field.node.support_book.body
     - node.type.support_book
+    - system.menu.support-book
   module:
     - layout_builder
     - layout_discovery
+    - menu_block
     - text
     - user
 third_party_settings:
@@ -17,12 +19,52 @@ third_party_settings:
         layout_id: layout_onecol
         layout_settings: {  }
         components:
-          37bb9a48-bb6a-4680-b372-ff7b2a2d8817:
-            uuid: 37bb9a48-bb6a-4680-b372-ff7b2a2d8817
+          8e0351bb-7144-42ba-9aa9-4f05d69689a0:
+            uuid: 8e0351bb-7144-42ba-9aa9-4f05d69689a0
+            region: content
+            configuration:
+              id: 'menu_block:support-book'
+              label: 'Support Book'
+              provider: menu_block
+              label_display: visible
+              level: 1
+              depth: 0
+              expand: 0
+              parent: 'support-book:'
+              suggestion: support_book
+              context_mapping: {  }
+            additional: {  }
+            weight: 0
+      -
+        layout_id: layout_onecol
+        layout_settings: {  }
+        components:
+          ad6a5067-9af1-48ed-843a-0bf10b3a93be:
+            uuid: ad6a5067-9af1-48ed-843a-0bf10b3a93be
+            region: content
+            configuration:
+              id: 'field_block:node:support_book:title'
+              label: Title
+              provider: layout_builder
+              label_display: '0'
+              formatter:
+                label: hidden
+                type: string
+                settings:
+                  link_to_entity: false
+                third_party_settings: {  }
+              context_mapping:
+                entity: layout_builder.entity
+            additional: {  }
+            weight: 0
+          9378ea9d-cbcb-4ea7-ad2f-7de2e8e4f7c8:
+            uuid: 9378ea9d-cbcb-4ea7-ad2f-7de2e8e4f7c8
             region: content
             configuration:
               id: 'field_block:node:support_book:body'
-              label_display: ''
+              label: Body
+              provider: layout_builder
+              label_display: '0'
               formatter:
                 label: hidden
                 type: text_default
@@ -31,7 +73,9 @@ third_party_settings:
               context_mapping:
                 entity: layout_builder.entity
             additional: {  }
-            weight: 0
+            weight: 1
+    allow_custom: false
+    is_enabled: true
 _core:
   default_config_hash: zs7lQwC-x3RO8F51uxAs-b0WMoO79Uls3sPCfC8Ggks
 id: node.support_book.default
